# MyAnalyst

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LINKEDIN.md  README.md  ROADMAP.md  pnpm-workspace.yaml
.claude/skills/framer-motion/: SKILL.md
.github/workflows/: ci.yml
analysis/: README.md  demo.py  engine.py  requirements.txt  test_engine.py
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: README.md
apps/api/app/cleaning/: __init__.py
apps/api/app/core/: config.py
apps/api/app/dashboard/: assembler.py
apps/api/app/db/: rls.py
apps/api/app/ingestion/: __init__.py
apps/api/app/insights/: llm_client.py
apps/api/app/kpi_engine/: __init__.py
apps/api/app/models/: README.md
apps/api/app/profiling/: __init__.py
apps/api/app/stats_engine/: __init__.py
apps/api/app/workers/: pipeline.py
apps/api/tests/: test_tenant_isolation.py
apps/pyapi/: vercel.json
apps/pyapi/api/: README.md  _ask.py  _charts.py  _conclude.py  _currency.py  _demo.py  _distribution.py  _engine.py  _forecast.py  _groq.py  _insights.py  _outliers.py  _quality.py  _segments.py  _stats.py  (+4 more)
apps/web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
docs/: 01-architecture.md  02-tech-stack.md  03-security-privacy.md  04-mvp-roadmap.md  05-feature-catalog.md  06-python-migration.md  README.md
docs/adr/: 0001-foundational-decisions.md
infra/: README.md  docker-compose.yml
ml/: README.md
ml/prompts/: insight_generation.md
scripts/: README.md
supabase/: schema.sql
(+211 files in other folders)
